# FastLED

./: .gitignore  CMakeLists.txt
examples/LinuxDemo/: LinuxDemo  LinuxDemo.cpp  Makefile
examples/LinuxDemo/objs/: LinuxDemo.d
src/: FastLED.cpp  Makefile.linux  colorutils.cpp  fastpin.h  fastspi.h  led_sysdefs.h  platforms.h  power_mgt.cpp  unix_helpers.cpp
